@@ -5,7 +5,9 @@ suggesting various improvements or submitting actual code. Here is a list
 of these people. Help us keep it complete and exempt of errors.
 
 Bill Jones              <rj7252@att.com>
+Craig Young             <csy@ecraig.com>
 Jakub Bogusz            <qboosh@pld-linux.org>
+Lionel Debroux          <lionel_debroux@yahoo.fr>  
 Matthew Burgess		<matthew@linuxfromscratch.org>
 Tanaka Akira 		<akr@fsij.org>
 Thomas Klausner		<tk@giga.or.at>
