@@ -224,9 +224,10 @@ extern int gdbm_copy_meta (GDBM_FILE dst, GDBM_FILE src);
 # define GDBM_BAD_HEADER                33
 # define GDBM_BAD_AVAIL                 34
 # define GDBM_BAD_HASH_TABLE            35
+# define GDBM_BAD_DIR_ENTRY             36
 
 # define _GDBM_MIN_ERRNO	0
-# define _GDBM_MAX_ERRNO	GDBM_BAD_HASH_TABLE
+# define _GDBM_MAX_ERRNO	GDBM_BAD_DIR_ENTRY
 
 /* This one was never used and will be removed in the future */
 # define GDBM_UNKNOWN_UPDATE GDBM_UNKNOWN_ERROR
